<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Title -->
    <string name="app_name">Feed The Kitty</string>
    <string name="title_public">Public</string>
    <string name="title_private">Private</string>
    <string name="title_history">History</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="title_activity_venmo">Venmo</string>

    <!-- Navigation and Settings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>

    <!-- History -->
    <string name="history_detail_end">Event is ended</string>
    <string name="total_event_tag">Total Event Entered: </string>
    <string name="total_amount_tag">Total Amount Donated: $</string>
    <string name="thank_you">Thank you</string>
    <string name="detail_payment">You Paid: </string>

    <!-- Resources -->
    <string name="facebook_app_id">681451701962786</string>
    <string name="connect_facebook">Connect with Facebook</string>
    <string name="icon_description">Icon of the Event</string>
    <string name="detail_text">Details:</string>
    <string name="settings_button">Settings</string>

    <!-- Event -->
    <string name="event_add">Add Event</string>
    <string name="donate_button_text">Donate</string>
    <string name="payment_success_base">Payment Successful!</string>
    <string name="payment_fail">Payment failed!</string>
    <string name="event_create_name">Event Name (required)</string>
    <string name="event_create_desc">Description (optional)</string>
    <string name="event_create_loc">Location (required)</string>
    <string name="event_create_hashtag">Hashtag (optional)</string>
    <string name="event_create_date">Event Date:</string>
    <string name="event_create_time">Event Time:</string>
    <string name="event_create_visibility">Event Visibility:</string>
    <string name="event_create_radio_public">Public</string>
    <string name="event_create_radio_private">Private</string>
    <string name="btn_event_create">Create Event</string>
    <string name="btn_private_event">Private Event</string>
    <string name="btn_post_twitter">Tweet It</string>
    <string name="btn_share">Share</string>
    <string name="error_empty">This field cannot be empty</string>
    <string name="btn_image_upload">Upload Image</string>
    <string name="title_activity_venmo_web_view">Venmo</string>
    <string name="msg_created">Event created!</string>
    <string name="venmo_verified">Venmo account verified!</string>
    <string name="event_payment_amount">Amount to Donate (required)</string>
	<string name="event_payment_note">Note (required)</string>
	<string name="btn_verify_venmo">Verify Venmo</string>
	<string name="error_venmo_verify">You must verify your venmo account to create an event!</string>
    <string name="detail_host">Host: </string>
    <string name="login_ic">Welcome</string>
</resources>