<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A349A4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="main.LoginActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/login_segment1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/login_segment1.1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:weightSum="1" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login_ic"
                android:src="@drawable/feed_me" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/app_name"
                android:textColor="#FE8909"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <com.facebook.widget.LoginButton
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fb:login_text="@string/connect_facebook" />
    </LinearLayout>

</LinearLayout>