<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/history_detail_segment1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/history_detail_segment1.1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight=".5"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/history_detail_icon"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#CCCCCC"
                android:contentDescription="@string/icon_description"
                android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_detail_segment1.2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight=".5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/history_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/history_detail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/history_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_detail_segment2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:background="#00FFFFFF"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/history_details_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/detail_host"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/history_detail_hostName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:scrollbars="vertical"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_detail_border_line1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".01"
        android:orientation="vertical" />
    
    <LinearLayout
        android:id="@+id/history_detail_segment3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".54"
        android:background="#08000000"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:id="@+id/hisory_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/detail_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/history_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="7"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/history_detail_border_line2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".01"
        android:orientation="vertical" />
    
    <LinearLayout
        android:id="@+id/history_detail_segment4"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".14"
        android:background="#0F000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:id="@+id/history_detail_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/history_detail_end"
            android:textColor="#FFFFFF"
            android:textSize="47sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>