<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="main.MainActivity$HistoryListFragment" >

    <LinearLayout
        android:id="@+id/history_list_segment1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/history_list_segment1.1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:background="#FEF2E6"
            android:orientation="vertical"
            android:weightSum="1" >

            <LinearLayout
                android:id="@+id/history_list_segment1.1.1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_list_total_event_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/total_event_tag"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/history_list_total_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/history_list_segment1.1.2"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_list_total_amount_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/total_amount_tag"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/history_list_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/history_list_segment1.1.3"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".6"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/thank_you"
                    android:src="@drawable/money" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_list_border_line1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".01"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/history_list_segment1.2"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".69"
            android:orientation="vertical"
            android:paddingBottom="5dp" >

            <ListView
                android:id="@+id/history_event_list_view"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="@android:color/transparent"
                android:clickable="true"
                android:divider="@null"
                android:dividerHeight="10dp"
                android:listSelector="@android:color/transparent" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>